2009-10-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Coverage for Version.pm.
	* lib/Automake/tests/Version.pl (test_version_compare): Also
	try Automake::Version::check for the version pairs, taking into
	account the special-case naming of code forks.
	(@tests): Add more test cases.
	(test_bad_versions, @bad_versions): New function, new test cases,
	to ensure bad version strings are rejected.
	* lib/Automake/tests/Version2.pl: New test.
	* lib/Automake/tests/Version3.pl: Likewise.
	* lib/Automake/tests/Makefile.am (TESTS): Add tests here ...
	(XFAIL_TESTS): ... and here, new.

	Pod coverage for Perl modules.
	* lib/Automake/ChannelDefs.pm (parse_warnings): Fix
	typo in Pod documentation.
	* lib/Automake/Condition.pm: Add a couple of missing `=back'
	lines.
	(_has): Renamed from ...
	(has): ... this, as this is an internal method.
	(strip, false, true_when): Adjust callers.
	* lib/Automake/Configure_ac.pm: Add Pod `Functions' section with
	documentation for find_configure_ac and require_configure_ac.
	* lib/Automake/Location.pm: Fix typo in Pod.  Add `Methods'
	section, document methods.
	* lib/Automake/RuleDef.pm: New `Methods' Pod section.
	* lib/Automake/VarDef.pm: Document `raw_value'.
	* lib/Automake/Wrap.pm (_tab_length): Rename from ...
	(tab_length): ... this, as this is an internal method.
	(wrap): Adjust callers.
	* lib/Automake/XFile.pm: Reorganize Pod a bit, add `Methods'
	section.

2009-10-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Perl coverage support using Devel::Cover.
	This introduces makefile rules to run the testsuite with Perl
	coverage enabled.  It skips tests that use perl ithreads, by
	unsetting AUTOMAKE_JOBS and setting WANT_NO_THREADS to make the
	threaded tests skip.
	* Makefile.am (PERL_COVERAGE_DB, PERL_COVERAGE_FLAGS)
	(PERL_COVER): New variables.
	(check-coverage, recheck-coverage, clean-coverage): New phony
	targets.
	(check-coverage-run, recheck-coverage-run): New phony helper
	targets.