@@ -1,5 +1,11 @@
 2009-10-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Coverage for Wrap.pm.
+	* lib/Automake/tests/Wrap.pl (@tests): Add test for word with
+	trailing space.
+	(test_makefile_wrap, @makefile_tests): New function, new list of
+	tests, to test makefile_wrap.
+
 	Coverage for Version.pm.
 	* lib/Automake/tests/Version.pl (test_version_compare): Also
 	try Automake::Version::check for the version pairs, taking into
